--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    animation: fadeIn 1.5s forwards;
 }
 .totalblack{
     width:90%;
@@ -19,12 +20,30 @@ body{
     box-shadow: 10px 3px 5px 6px;
     border-radius: 20px;
     position: relative;
+    
 }
 ul li{
     text-decoration: none;
     display: block;
-    
-    
+}
+nav:hover{
+        transform: translateY(-5px) scale(1.03);
+        box-shadow: 0 15px 35px rgba(0, 255, 255, 0.4);
+}
+.edu:hover{
+    transform: translateY(-5px) scale(1.03);
+        box-shadow: 0 15px 35px rgba(0, 255, 255, 0.4);
+        border-radius: 20px;
+}
+.cer:hover{
+    transform: translateY(-5px) scale(1.03);
+        box-shadow: 0 15px 35px rgba(0, 255, 255, 0.4);
+        border-radius: 20px;
+}
+.ww:hover{
+    transform: translateY(-5px) scale(1.03);
+        box-shadow: 0 15px 35px rgba(0, 255, 255, 0.4);
+        border-radius: 20px;
 }
 ul{
 width: 100%;
@@ -67,10 +86,24 @@ margin-top: 90px;
 border-radius: 50%;
 background-position: center;
 }
+
 .myname{
 color: white;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-margin-left: 50px;
+border-right: 2px solid #fff;
+white-space: nowrap;
+overflow: hidden;
+width: 0;
+font-size: 2rem;
+animation: typing 3s steps(30, end) forwards, blink 0.6s step-end infinite;
+}
+
+@keyframes typing {
+from { width: 0 }
+to { width: 100% }
+}
+
+@keyframes blink {
+50% { border-color: transparent }
 }
 .edu h2,h4,p{
 color: #ffff;
@@ -148,9 +181,13 @@ label{
     box-shadow: 8px 7px 9px 10px;
     background-color: transparent;
     border-radius: 30px;
+   
 }
 .detils p{
     padding-left: 50px;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typing 7s steps(30, end) forwards, blink 0.6s step-end infinite;
 }
 @media only screen and (max-width:1100px)
 {
@@ -171,3 +208,34 @@ label{
 .detils p{
     margin-left: 7px;
 }
+div h3,p,h4{
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typing 3s steps(30, end) forwards, blink 0.6s step-end infinite;
+}
+img{
+    animation: float 3s ease-in-out infinite;
+      box-shadow: 0 10px 25px rgba(0, 255, 255, 0.2);
+}
+@keyframes float {
+    0% {
+      transform: translateY(0px);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+    100% {
+      transform: translateY(0px);
+    }
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    50%{
+      opacity: 0.5;
+    }
+    100%{
+    opacity:1;
+    }
+  }
